<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".Register.Login.LoginActivity">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayoutmain"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >


        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/iv_background"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_188sdp"
            android:contentDescription="@string/background_image"
            android:scaleType="fitXY"
            android:src="@drawable/black_border_bottom"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/iv_intouch_logo"
            android:layout_width="@dimen/_60sdp"
            android:layout_height="@dimen/_60sdp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:contentDescription="@string/intouch_logo"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_intouchlogo"
            app:layout_constraintBottom_toBottomOf="@+id/iv_background"
            app:layout_constraintEnd_toStartOf="@+id/guideline11"
            app:layout_constraintHorizontal_bias="0.441"
            app:layout_constraintStart_toStartOf="@+id/guideline11"
            app:layout_constraintTop_toTopOf="@+id/iv_background"
            app:layout_constraintVertical_bias="0.308" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/iv_back"
            android:layout_width="@dimen/_18sdp"
            android:layout_height="@dimen/_18sdp"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:src="@drawable/ic_chevron_left_24px"
            app:layout_constraintBottom_toTopOf="@+id/guideline"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <TextView
            android:id="@+id/welcome_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:fontFamily="@font/dosis_semibold"
            android:text="@string/welcome_back"
            android:textColor="@color/white"
            android:textSize="@dimen/_16ssp"
            app:layout_constraintBottom_toBottomOf="@+id/iv_background"
            app:layout_constraintEnd_toStartOf="@+id/guideline11"
            app:layout_constraintHorizontal_bias="0.465"
            app:layout_constraintStart_toStartOf="@+id/guideline11"
            app:layout_constraintTop_toBottomOf="@+id/iv_intouch_logo"
            app:layout_constraintVertical_bias="0.0" />


        <TextView
            android:id="@+id/tv_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:fontFamily="@font/dosis_semibold"
            android:text="@string/email"
            android:textColor="@color/black"
            android:textSize="@dimen/_13ssp"
            app:layout_constraintBottom_toTopOf="@+id/hguideline13"
            app:layout_constraintStart_toStartOf="@+id/guideline2" />

        <EditText
            android:id="@+id/et_mail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_16sdp"
            android:textCursorDrawable="@null"
            android:layout_marginEnd="55dp"
            android:autofillHints="@string/email"
            android:background="@null"
            android:fontFamily="@font/dosis_light"
            android:hint="@string/hint_mail"
            android:inputType="textEmailAddress"
            android:textColor="@color/dark_grey"
            android:textSize="@dimen/_12ssp"
            app:layout_constraintEnd_toStartOf="@+id/guideline12"
            app:layout_constraintStart_toStartOf="@+id/guideline2"
            app:layout_constraintTop_toBottomOf="@+id/tv_email" />

        <ImageView
            android:id="@+id/iv_line"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_light_line"
            android:contentDescription="@string/line"
            app:layout_constraintTop_toBottomOf="@+id/et_mail"
            tools:layout_editor_absoluteX="0dp" />

        <ImageView
            android:id="@+id/iv_mail"
            android:layout_width="@dimen/_18sdp"
            android:layout_height="@dimen/_18sdp"
            android:layout_marginEnd="8dp"
            android:src="@drawable/ic_mail_outline_24px"
            app:layout_constraintBottom_toTopOf="@+id/hguideline13"
            app:layout_constraintEnd_toStartOf="@+id/guideline12"
            app:layout_constraintHorizontal_bias="0.214"
            app:layout_constraintStart_toStartOf="@+id/guideline12"
            app:layout_constraintTop_toTopOf="@+id/hguideline13" />

        <TextView
            android:id="@+id/tv_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:fontFamily="@font/dosis_semibold"
            android:text="@string/password"
            android:textColor="@color/black"
            android:textSize="@dimen/_13ssp"
            app:layout_constraintBottom_toTopOf="@+id/hguideline14"
            app:layout_constraintStart_toStartOf="@+id/guideline2"
            app:layout_constraintTop_toBottomOf="@+id/et_mail"
            app:layout_constraintVertical_bias="0.0" />

        <EditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_16sdp"
            android:layout_marginEnd="55dp"
            android:autofillHints="@string/password"
            android:background="@null"
            android:textCursorDrawable="@null"
            android:hint="@string/hint_pass"
            android:inputType="textPassword"
            android:textColor="@color/dark_grey"
            android:textSize="@dimen/_12ssp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/guideline2"
            app:layout_constraintTop_toTopOf="@+id/hguideline14" />


        <ImageView
            android:id="@+id/iv_line2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/line"
            android:background="@drawable/ic_light_line"
            app:layout_constraintBottom_toBottomOf="@+id/et_password"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent" />

        <ImageView
            android:id="@+id/iv_lock"
            android:layout_width="@dimen/_18sdp"
            android:layout_height="@dimen/_18sdp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:src="@drawable/ic_lock_24px"
            app:layout_constraintBottom_toTopOf="@+id/hguideline14"
            app:layout_constraintEnd_toStartOf="@+id/guideline12"
            app:layout_constraintStart_toStartOf="@+id/guideline12"
            app:layout_constraintTop_toTopOf="@+id/hguideline14" />


        <Button
            android:id="@+id/btn_login"
            android:layout_width="@dimen/_120sdp"
            android:layout_height="@dimen/_33sdp"
            android:layout_marginTop="28dp"
            android:layout_marginEnd="8dp"
            android:background="@drawable/ic_btn_login_black"
            android:fontFamily="@font/dosis_light"
            android:foregroundGravity="center"
            android:text="@string/btn_login"
            android:textColor="@color/white"
            android:textSize="@dimen/_13ssp"
            app:layout_constraintEnd_toStartOf="@+id/guideline11"
            app:layout_constraintHorizontal_bias="0.468"
            app:layout_constraintStart_toStartOf="@+id/guideline11"
            app:layout_constraintTop_toBottomOf="@+id/iv_line2" />


        <TextView
            android:id="@+id/tv_forgetpass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="8dp"
            android:fontFamily="@font/dosis"
            android:text="@string/forgot_password"
            android:textColor="@color/dark_grey"
            android:textSize="@dimen/_13ssp"
            app:layout_constraintEnd_toStartOf="@+id/guideline11"
            app:layout_constraintHorizontal_bias="0.479"
            app:layout_constraintStart_toStartOf="@+id/guideline11"
            app:layout_constraintTop_toBottomOf="@+id/btn_login" />


        <TextView
            android:id="@+id/tv_movetosignup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="8dp"
            android:fontFamily="@font/dosis_light"
            android:text="@string/dont_have_account"
            android:textColor="@color/grey"
            android:textSize="@dimen/_12ssp"
            app:layout_constraintEnd_toStartOf="@+id/guideline11"
            app:layout_constraintHorizontal_bias="0.482"
            app:layout_constraintStart_toStartOf="@+id/guideline11"
            app:layout_constraintTop_toBottomOf="@+id/tv_forgetpass" />


        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="20dp"
            app:layout_constraintGuide_percent="0.5" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="20dp"
            app:layout_constraintGuide_percent="0.9" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="20dp"
            app:layout_constraintGuide_percent="0.05" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/hguideline13"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="20dp"
            app:layout_constraintGuide_percent="0.55" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/hguideline14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="478dp"
            app:layout_constraintGuide_percent="0.65" />

    </androidx.constraintlayout.widget.ConstraintLayout>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayoutprogress"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/hguidelineprogress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="20dp"
            app:layout_constraintGuide_percent="0.5" />

        <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="@dimen/_80sdp"
            android:layout_height="@dimen/_80sdp"
            android:indeterminateDrawable="@drawable/progress"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/hguidelineprogress"
            app:layout_constraintEnd_toStartOf="@+id/vguidelineprogress"
            app:layout_constraintStart_toStartOf="@+id/vguidelineprogress"
            app:layout_constraintTop_toTopOf="@+id/hguidelineprogress" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/vguidelineprogress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="20dp"
            app:layout_constraintGuide_percent="0.5" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>